--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- DELETE THIS -->
+    <p class=""></p>
   </body>
 </html>
